--- a/pages/foodorder/foodorder.wxml
+++ b/pages/foodorder/foodorder.wxml
@@ -2,11 +2,11 @@
 <wxs module="dateFr" src='../../utils/filter.wxs'></wxs>
 <wxs module="foodorderconfirm" src='../../utils/wxs/foodorderconfirm.wxs'></wxs>
 <import src="../../wxParse/wxParse.wxml" />
-<view class='order_over' wx:if='{{orderStatus === "over"}}'>
+<view class='order_over' wx:if='{{orderStatus}}'>
   <view class='foodorder_warning'>
     <image src='../../img/foodorder/foodorder_warning.png'></image>
   </view>
-  <view class='text'>订单已完成</view>
+  <view class='text'>{{orderWarningTipsText}}</view>
 </view>
 <view class='container' wx:else>
   <view class='top_info'>
