--- a/pages/foodorder/foodorder.wxml
+++ b/pages/foodorder/foodorder.wxml
@@ -86,7 +86,7 @@
       </view>
       <scroll-view scroll-y='{{true}}' style='height: {{winHeight - 80 - (dateFr.getSelfHelpTipsShow(selfHelp, foodItems, consumerCount) ? 110 : 0)}}rpx;'>
         <block wx:for='{{checkCategory.items}}' wx:key='{{index}}'>
-          <view class='food_tips {{dateFr.getNowFoodOrderNum(foodItems, item.foods[0].id) ? "selected" : ""}}' wx:if='{{checkCategory.type === 1 && !toPage}}'>
+          <view class='food_tips {{foodorderconfirm.getMenuItemFoodSelected(foodItems, item.id, item.limit) ? "selected" : ""}}' wx:if='{{checkCategory.type === 1 && !toPage}}'>
             <text wx:if='{{!item.limit}}'>以下菜品必点</text>
             <text wx:else>菜品种类至少选{{item.limit}}种,已选{{foodorderconfirm.getMenuItemFoodNumber(foodItems, item.id)}}种</text>
           </view>
