--- a/pages/foodorder/foodorder.wxml
+++ b/pages/foodorder/foodorder.wxml
@@ -86,7 +86,7 @@
       </view>
       <scroll-view scroll-y='{{true}}' style='height: {{winHeight - 80 - (dateFr.getSelfHelpTipsShow(selfHelp, foodItems, consumerCount) ? 110 : 0)}}rpx;'>
         <block wx:for='{{checkCategory.items}}' wx:key='{{index}}'>
-          <view class='food_tips {{foodorderconfirm.getMenuItemFoodSelected(foodItems, item.id, item.limit) ? "selected" : ""}}' wx:if='{{checkCategory.type === 1 && !toPage}}'>
+          <view class='food_tips {{foodorderconfirm.getMenuItemFoodSelected(foodItems, item.id, item.limit) ? "selected" : ""}}' wx:if='{{checkCategory.type === 1 && (!toPage || !foodOrderBatch.orderItems)}}'>
             <text wx:if='{{!item.limit}}'>以下菜品必点</text>
             <text wx:else>菜品种类至少选{{item.limit}}种,已选{{foodorderconfirm.getMenuItemFoodNumber(foodItems, item.id)}}种</text>
           </view>
@@ -228,7 +228,7 @@
             </block>
           </view>
         </block>
-        <view class='list' wx:if='{{consumerCount}}'>
+        <view class='list' wx:if='{{dateFr.getNowFoodOrderTotalPrice(orderItems, goods, consumerCount)}}'>
           <view class='list_flex'>
             <view class='left'>
               <view class='subInfo bloder black'>小计</view>
@@ -236,7 +236,7 @@
             <view class='price bloder key_color'>JPY{{dateFr.getNowFoodOrderTotalPrice(orderItems, goods, consumerCount)}}</view>
           </view>
         </view>
-        <view class='list' wx:if='{{consumerCount}}'>
+        <view class='list' wx:if='{{dateFr.getNowFoodOrderServiceCharge(orderItems, goods, consumerCount)}}'>
           <view class='list_flex'>
             <view class='left'>
               <view class='subInfo bloder black'>服务费</view>
