--- a/pages/foodorderconfirm/foodorderconfirm.wxml
+++ b/pages/foodorderconfirm/foodorderconfirm.wxml
@@ -8,10 +8,10 @@
         <text>用餐人数</text>
       </view>
       <view class='right'>
-        <text>×{{consumerCount}}</text>
+        <text>×{{personNum}}</text>
       </view>
     </view>
-    <view class='flex'>
+    <view class='flex' wx:if='{{teeFee}}'>
       <view class='left'>
         <text>茶位费</text>
       </view>
@@ -42,7 +42,13 @@
       <block wx:for='{{item.subOrderItems}}' wx:for-item='sub' wx:for-index='idx' wx:key='{{idx}}'>
         <view class='flex'>
           <view class='left'>
-            <view>{{sub.food.foodName}}</view>
+            <block wx:if='{{sub.spcItems.length}}'>
+              <view>{{sub.food.foodName}}</view>
+              <view>{{foodorderconfirm.getSpcItemsText(sub.spcItems)}}</view>
+            </block>
+            <block wx:else>
+              <view>{{sub.food.foodName}}</view>
+            </block>
           </view>
           <view class='right'>
             <text>×{{sub.foodNumber}}</text>
@@ -71,7 +77,13 @@
       <block wx:for='{{item.subOrderItems}}' wx:for-item='sub' wx:for-index='idx' wx:key='{{idx}}'>
         <view class='flex'>
           <view class='left'>
-            <view>{{sub.food.foodName}}</view>
+            <block wx:if='{{sub.spcItems.length}}'>
+              <view>{{sub.food.foodName}}</view>
+              <view>{{foodorderconfirm.getSpcItemsText(sub.spcItems)}}</view>
+            </block>
+            <block wx:else>
+              <view>{{sub.food.foodName}}</view>
+            </block>
           </view>
           <view class='right'>
             <text>×{{sub.foodNumber}}</text>
@@ -100,7 +112,13 @@
       <block wx:for='{{item.subOrderItems}}' wx:for-item='sub' wx:for-index='idx' wx:key='{{idx}}'>
         <view class='flex'>
           <view class='left'>
-            <view>{{sub.food.foodName}}</view>
+            <block wx:if='{{sub.spcItems.length}}'>
+              <view>{{sub.food.foodName}}</view>
+              <view>{{foodorderconfirm.getSpcItemsText(sub.spcItems)}}</view>
+            </block>
+            <block wx:else>
+              <view>{{sub.food.foodName}}</view>
+            </block>
           </view>
           <view class='right'>
             <text>×{{sub.foodNumber}}</text>
@@ -129,7 +147,13 @@
       <block wx:for='{{item.subOrderItems}}' wx:for-item='sub' wx:for-index='idx' wx:key='{{idx}}'>
         <view class='flex'>
           <view class='left'>
-            <view>{{sub.food.foodName}}</view>
+            <block wx:if='{{sub.spcItems.length}}'>
+              <view>{{sub.food.foodName}}</view>
+              <view>{{foodorderconfirm.getSpcItemsText(sub.spcItems)}}</view>
+            </block>
+            <block wx:else>
+              <view>{{sub.food.foodName}}</view>
+            </block>
           </view>
           <view class='right'>
             <text>×{{sub.foodNumber}}</text>
@@ -148,7 +172,7 @@
       </view>
     </view>
   </view>
-  <view class='area'>
+  <view class='area' wx:if='{{serviceFee}}'>
     <view class='flex'>
       <view class='left'>
         <text>服务费</text>
