--- a/utils/filter.wxs
+++ b/utils/filter.wxs
@@ -228,14 +228,6 @@ var DateFr = {
     };
     return str;
   },
-  getExtFieldText: function(str) {
-    var obj = JSON.parse(str);
-    var result = ''
-    if (obj['babyChairCount']) {
-      result += '安全座椅:' + obj['babyChairCount']
-    }
-    return result;
-  },
   getPayTypeText: function(type) {
     var str = '';
     if (type === 1) str = '支付宝';
@@ -287,33 +279,6 @@ var DateFr = {
     if (status === 5) str = '已完成'; 
     return str;
   },
-  getFoodOrderTotal: function(dots) {
-    var total = dots.map(function(item) {
-      return item.foodOrderBatchDetail.foodNumber;
-    }).reduce(function(pre, next) {
-      return pre + next;
-    });
-    return total;
-  },
-  getNowFoodOrderNum: function(arr, fid, mid) {
-    if (arr.length) {
-      var result = arr.filter(function(item) {
-        return item.foodId === fid && item.menuId === mid;
-      }).reduce(function(pre, curr) {
-        return pre + curr.foodNumber;
-      }, 0);
-      return result;
-    } else {
-      return 0;
-    }
-  },
-  getFoodOrderBatchTotalPrice: function(dots) {
-    var price = dots.reduce(function(pre, next) {
-      return pre + (next.foodOrderBatchDetail.foodPrice * next.foodOrderBatchDetail.foodNumber)
-    }, 0);
-    var result = price / 100 >= 1 ? parseInt(price / 100) : (price / 100).toFixed(2);
-    return result;
-  },
   getOrderPageUseDateText: function(type) {
     var str = '';
     if (type === 11 || type === 12 || type === 34) {
@@ -336,11 +301,24 @@ var DateFr = {
       return '';
     }
   },
+  // 获取当前已经选择菜品数量
+  getNowFoodOrderNum: function (arr, fid, mid) {
+    if (arr.length) {
+      var result = arr.filter(function (item) {
+        return item.foodId === fid && item.menuId === mid && !item.selfFoodStyle;
+      }).reduce(function (pre, curr) {
+        return pre + curr.foodNumber;
+      }, 0);
+      return result;
+    } else {
+      return 0;
+    }
+  },
   // 获取当前菜品分类选择的份数
   getCheckedFoodMenuCount: function(arr, menuId) {
     if (arr.length && menuId) {
       var num = arr.filter(function(item) {
-        return item.menuId === menuId;
+        return item.menuId === menuId && !item.selfFoodStyle;
       }).reduce(function(pre, curr) {
         return pre + curr.foodNumber || 0
       }, 0);
@@ -353,7 +331,7 @@ var DateFr = {
   getNowFoodIsCheck: function(arr, fid, mid) {
     if (arr && fid) {
       var result = arr.filter(function(item) {
-        return item.foodId === fid && item.menuId === mid;;
+        return item.foodId === fid && item.menuId === mid && !item.selfFoodStyle;
       });
       return result.length ? true : false;
     } else {
@@ -363,7 +341,7 @@ var DateFr = {
   // 获取被选中的食物的份数和数量
   getCheckedFoodNumAndTotal: function(arr, fid, mid) {
     var food = arr.filter(function(item) {
-      return item.foodId === fid && item.menuId === mid;
+      return item.foodId === fid && item.menuId === mid && !item.selfFoodStyle;
     });
     var total = food[0].subFoodItems.reduce(function(pre, curr) {
       return pre + curr.foodNumber;
@@ -521,7 +499,9 @@ var DateFr = {
   // 获取点菜订单的食品数量
   getNowFoodOrderFoodNumber: function(orderItems) {
     if (orderItems.length) {
-      var num = orderItems.reduce(function(cur, next) {
+      var num = orderItems.filter(function (item) {
+        return !item.selfFoodStyle;
+      }).reduce(function(cur, next) {
         return cur + next.foodNumber;
       }, 0)
       return num > 99 ? '99+' : num;
@@ -536,7 +516,7 @@ var DateFr = {
         return item.id;
       });
       var num = foodItems.filter(function(item) {
-        return sId.indexOf(item.foodId) !== -1;
+        return sId.indexOf(item.foodId) !== -1 && !item.selfFoodStyle;
       }).reduce(function(cur, next) {
         return cur + next.foodNumber;
       }, 0);
@@ -559,7 +539,7 @@ var DateFr = {
       return item.id;
     });
     var num = foodItems.filter(function(item) {
-      return sId.indexOf(item.foodId) !== -1;
+      return sId.indexOf(item.foodId) !== -1 && !item.selfFoodStyle;
     }).reduce(function(cur, next) {
       return cur + next.foodNumber;
     }, 0);
@@ -585,16 +565,13 @@ module.exports = {
   getOrderStatusSubText: DateFr.getOrderStatusSubText,
   getOrderDate: DateFr.getOrderDate,
   getOrderTime: DateFr.getOrderTime,
-  getExtFieldText: DateFr.getExtFieldText,
   getPayTypeText: DateFr.getPayTypeText,
   secondToDate: DateFr.secondToDate,
   getLinePendingDateText: DateFr.getLinePendingDateText,
   getLineOverDateText: DateFr.getLineOverDateText,
   getLineStatusText: DateFr.getLineStatusText,
   getFoodStatusText: DateFr.getFoodStatusText,
-  getFoodOrderTotal: DateFr.getFoodOrderTotal,
   getNowFoodOrderNum: DateFr.getNowFoodOrderNum,
-  getFoodOrderBatchTotalPrice: DateFr.getFoodOrderBatchTotalPrice,
   getOrderPageUseDateText: DateFr.getOrderPageUseDateText,
   getReceiverEnglishNameText: DateFr.getReceiverEnglishNameText,
   getScheduledTime: DateFr.getScheduledTime,
